--- a/meteor/imports/ui/components/login/choices/index.html
+++ b/meteor/imports/ui/components/login/choices/index.html
@@ -18,12 +18,12 @@
         <table align="center">
             <tr>
                 <td style="border-right: 1px solid lightgrey; padding-right: 20px;">
-                    <div data-popup=".popup-impressum" class="open-popup" style="text-align: center;">
+                    <div data-popup=".popup-impressum" class="open-popup t-center">
                         Impressum
                     </div>
                 </td>
                 <td style="padding-left: 20px;">
-                    <div data-popup=".popup-datanschutz" class="open-popup" style="text-align: center;">
+                    <div data-popup=".popup-datanschutz" class="open-popup t-center">
                         Datenschutzerklärung
                     </div>
                 </td>
