--- a/meteor/imports/ui/components/offline/index.html
+++ b/meteor/imports/ui/components/offline/index.html
@@ -10,9 +10,9 @@
                         nutzen zu können.
                     </div>
                     <div class="list-block">
-                        <img src="/gorilla.jpg" style="width: 100%">
+                        <img src="/gorilla.jpg" class="full-width">
                     </div>
-                    <div class="list-block" style="text-align: center;">
+                    <div class="list-block t-center">
                         <div id="goToLoginButton" class="big-button" style="background-color: green">
                             Zum Login!
                         </div>
