--- a/meteor/imports/ui/components/icons.html
+++ b/meteor/imports/ui/components/icons.html
@@ -11,7 +11,7 @@
 <template name="iconWarn">
     <svg class="icon i-warn animated {{class}}"
          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
-        <circle class="warning__circle" cx="26" cy="26" r="25"
+        <circle class="i__circle" cx="26" cy="26" r="25"
                 fill="none"></circle>
         <path class="i__dash" fill="none"
               d="M26 11.5 l0 20.5"></path>
