Reworked template structure  |  imports/ui/components -> client/components  |  resolves #91, resolves #88

--- a/meteor/client/components/input/input.html
+++ b/meteor/client/components/input/input.html
@@ -109,119 +109,11 @@
         <div class="popover-inner">
             <div class="list-block">
                 <ul>
-                    {{>switch title="Herren anzeigen" id="show-male"}}
-                    {{>switch title="Damen anzeigen" id="show-female"}}
-                    {{>switch title="Geschlechter gruppieren" id="group-by-sex"}}
+                    {{>settingSwitch title="Herren anzeigen" id="show-male"}}
+                    {{>settingSwitch title="Damen anzeigen" id="show-female"}}
+                    {{>settingSwitch title="Geschlechter gruppieren" id="group-by-sex"}}
                 </ul>
             </div>
         </div>
     </div>
-</template>
-
-<template name="switch">
-    <li>
-        <div class="item-content">
-            <div class="item-inner">
-                <div class="item-title label" style="width: 75%">{{title}}</div>
-                <div class="item-input" style="text-align: right">
-                    <label class="label-switch">
-                        <input type="checkbox" data-id="{{id}}" class="setting-checkbox">
-                        <div class="checkbox"></div>
-                    </label>
-                </div>
-            </div>
-        </div>
-    </li>
-</template>
-
-<template name="sportTypeDescriptions">
-    {{#each s in sportTypes}}
-        {{#with s}}
-            <div class="popup popup-{{id}}">
-                <div class="content-block">
-                    <a href="#" class="close-popup"><i class="f7-icons vcenterIcon link"
-                                                       style="float: left;">chevron_left</i></a>
-                    <h1 class="t-center">{{name}}</h1>
-                    <h5 class="t-center">Einheit: {{unit}}</h5>
-                    <p id="description" style="text-align: justify">{{{description}}}</p>
-                    <!--Three { are required for html Tags!-->
-                    {{#with m}}
-                        {{#each a in age}}
-                            {{a}}
-                        {{/each}}
-                    {{/with}}
-                    <!-- TODO Add female participant age and display it and the one for males in a meaningful manner instead of just listing them -->
-                </div>
-            </div>
-        {{/with}}
-    {{/each}}
-    <style>
-        .vcenterIcon {
-            height: 39px;
-            line-height: 39px;
-            text-align: center;
-        }
-
-        #description img {
-            display: block;
-            margin: auto;
-        }
-    </style>
-</template>
-
-<template name="attempts">
-    {{#with sportType}}
-        <div class="autoWidthListBlock">
-            <div class="content-block-title" data-swiper-parallax="-100" data-swiper-parallax-duration="500">
-                <a href="#" data-popup=".popup-{{name}}" class="link-open-st-info open-popup">
-                    {{#with metadata}}{{name}}{{/with}} <i class="f7-icons" style="font-size: 12px">info</i>
-                </a>
-            </div>
-            <div class="list-block"
-                 style="{{#if
-                         gap}}margin-bottom: 70px; padding-bottom: 70px; border-bottom: 1px solid rgb(200, 200, 200);{{/if}}">
-                <ul>
-                    {{#each m in measurements}}
-                        {{>attempt n=@index measurement=m metadata=metadata showIcon=true}}
-                    {{/each}}
-                    {{#if scoreWritePermission metadata}}
-                        {{>attempt n=(length measurements) measurement=empty_measurement metadata=metadata showIcon=false}}
-                    {{/if}}
-                </ul>
-            </div>
-        </div>
-    {{/with}}
-</template>
-
-<template name="attempt">
-    <li>
-        <div class="item-content">
-            <div class="item-media">
-                {{#if showIcon}}
-                    {{#with measurement}}
-                        {{#if synced}}
-                            {{> iconOK}}
-                        {{else}}
-                            {{> iconErr}}
-                        {{/if}}
-                    {{/with}}
-                {{else}}
-                    {{> iconReady}}
-                {{/if}}
-            </div>
-            <div class="item-inner">
-                <div class="item-title label">{{inc n}}. Versuch</div>
-                <div class="item input">
-                    <input type="{{#with metadata}}{{inputType}}{{/with}}"
-                           placeholder="Ergebnis in {{#with metadata}}{{unit}}{{/with}}"
-                           value="{{#with measurement}}{{strValue}}{{/with}}"
-                           data-attempt="{{inc n}}"
-                           data-stID="{{#with metadata}}{{id}}{{/with}}"
-                           class="{{#with measurement}}{{class}}{{/with}}"
-                        {{isReadOnly measurement}}
-                    >
-                </div>
-            </div>
-        </div>
-    </li>
 </template>
