Removed underline class from popover (resolves #90)

--- a/meteor/client/components/output/output.html
+++ b/meteor/client/components/output/output.html
@@ -54,7 +54,7 @@
     <div class="popover popover-groups">
         <div class="popover-angle"></div>
         <div class="popover-inner">
-            <div class="list-block hide-scrollbar limit-vertical-height hover-underline">
+            <div class="list-block hide-scrollbar limit-vertical-height">
                 <ul>
                     {{#each groups}}
                         <li><a href="#" class="list-button item-link group-link"
