--- a/meteor/client/components/input/input.html
+++ b/meteor/client/components/input/input.html
@@ -81,7 +81,7 @@
     <div class="popover popover-athletes">
         <div class="popover-angle"></div>
         <div class="popover-inner">
-            <div class="list-block hide-scrollbar limit-vertical-height hover-underline">
+            <div class="list-block hide-scrollbar limit-vertical-height">
                 <ul>
                     {{#each athletes}}
                         <li><a href="#" class="list-button item-link athlete-link"
