--- a/meteor/client/components/input/attempts/attempts.html
+++ b/meteor/client/components/input/attempts/attempts.html
@@ -11,10 +11,10 @@
                          gap}}margin-bottom: 70px; padding-bottom: 70px; border-bottom: 1px solid rgb(200, 200, 200);{{/if}}">
                 <ul>
                     {{#each m in measurements}}
-                        {{>attempt n=@index measurement=m metadata=metadata}}
+                        {{>attempt n=@index measurement=m metadata=metadata showIcon=true}}
                     {{/each}}
                     {{#if scoreWritePermission metadata}}
-                        {{>attempt n=(length measurements) measurement=empty_measurement metadata=metadata}}
+                        {{>attempt n=(length measurements) measurement=empty_measurement metadata=metadata showIcon=true}}
                     {{/if}}
                 </ul>
             </div>
