Added functional settings (resolves #65)

--- a/meteor/client/components/input/input.html
+++ b/meteor/client/components/input/input.html
@@ -109,9 +109,9 @@
         <div class="popover-inner">
             <div class="list-block">
                 <ul>
-                    {{>settingSwitch title="Herren anzeigen" id="show-male"}}
-                    {{>settingSwitch title="Damen anzeigen" id="show-female"}}
-                    {{>settingSwitch title="Geschlechter gruppieren" id="group-by-sex"}}
+                    {{>settingSwitch title="Herren anzeigen" id="showMale"}}
+                    {{>settingSwitch title="Damen anzeigen" id="showFemale"}}
+                    {{>settingSwitch title="Geschlechter gruppieren" id="groupBySex"}}
                 </ul>
             </div>
         </div>
