--- a/meteor/client/components/input/switch/switch.html
+++ b/meteor/client/components/input/switch/switch.html
@@ -5,7 +5,7 @@
                 <div class="item-title label" style="width: 75%">{{title}}</div>
                 <div class="item-input" style="text-align: right">
                     <label class="label-switch">
-                        <input type="checkbox" data-id="{{id}}" class="setting-checkbox">
+                        <input type="checkbox" data-id="{{id}}" checked="{{getState id}}" class="setting-checkbox">
                         <div class="checkbox"></div>
                     </label>
                 </div>
