Fixed title slider in input ui

--- a/meteor/client/components/input/input.html
+++ b/meteor/client/components/input/input.html
@@ -7,12 +7,15 @@
                     <div class="left"><a href="#" data-popup=".popup-help" class="open-popup"><i
                             class="f7-icons">help</i></a></div>
                     <div class="center truncate">
-                        <div id="input-name-swiper" class="swiper-container full-height">
-                            <div class="swiper-wrapper">
-                                {{#each a in athletes}}
-                                    <div class="swiper-slide open-popover hover-underline athlete-name"
-                                         data-popover=".popover-athletes">{{a.getFullName}}</div>
-                                {{/each}}
+                        <div class="slider-title-wrapper">
+                            <div class="slider-title-overlay"></div>
+                            <div id="input-name-swiper" class="swiper-container full-height">
+                                <div class="swiper-wrapper">
+                                    {{#each a in athletes}}
+                                        <div class="swiper-slide open-popover hover-underline athlete-name"
+                                             data-popover=".popover-athletes">{{a.getFullName}}</div>
+                                    {{/each}}
+                                </div>
                             </div>
                         </div>
                     </div>
