--- a/meteor/client/styles/slider-ui.css
+++ b/meteor/client/styles/slider-ui.css
@@ -24,7 +24,37 @@
 /* Styles related to the title of slider-UIs */
 .truncate {
     width: 250px;
+    height: 100%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.slider-title-wrapper {
+    position: relative;
+    width: 250px;
+    height: 100%;
+}
+
+.slider-title-overlay {
+    pointer-events: none; /*send mouse events to slider*/
+    width: 300px;
+    height: 100%;
+    left: -25px;
+    top: 0;
+    position: absolute;
+    background: rgba(0, 0, 0, 0); /*stupid browsers!!!*/
+    background: -webkit-linear-gradient(right, rgba(247, 247, 247, 1) 9%, rgba(247, 247, 247, 0) 30%, rgba(247, 247, 247, 0) 70%, rgba(247, 247, 247, 1) 91%);
+    background: -o-linear-gradient(right, rgba(247, 247, 247, 1) 9%, rgba(247, 247, 247, 0) 30%, rgba(247, 247, 247, 0) 70%, rgba(247, 247, 247, 1) 91%);
+    background: -moz-linear-gradient(right, rgba(247, 247, 247, 1) 9%, rgba(247, 247, 247, 0) 30%, rgba(247, 247, 247, 0) 70%, rgba(247, 247, 247, 1) 91%);
+    background: linear-gradient(right, rgba(247, 247, 247, 1) 9%, rgba(247, 247, 247, 0) 30%, rgba(247, 247, 247, 0) 70%, rgba(247, 247, 247, 1) 91%);
+    z-index: 10;
+}
+
+.slider-title-wrapper .swiper-container {
+    width: 250px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 9;
 }
