Fixed non-centered title by css width calculation (still fails <300px width), resolves #94

--- a/meteor/client/styles/f7-overwrite.css
+++ b/meteor/client/styles/f7-overwrite.css
@@ -18,7 +18,9 @@
 
 /* Alignment of left/right navbar elements */
 .navbar-inner .left, .navbar-inner .right {
-    width: 100px;
+    width: calc((100% - 250px) / 2);
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .navbar-inner .right {
